fix tabs border gap

--- a/app/styles/base/_typography.scss
+++ b/app/styles/base/_typography.scss
@@ -288,12 +288,17 @@ button {
 
       a {
         border: 1px solid transparent;
-        border-bottom: 1px solid $medium-gray;
+        border-bottom-width: 0;
         background-color: transparent;
 
+        &:not(.active) {
+          border-right-width: 0;
+          border-left-width: 0;
+          box-shadow: inset 0 -1px 0 0 $medium-gray;
+        }
+
         &.active {
-          border: 1px solid $medium-gray;
-          border-bottom-color: transparent;
+          border-color: $medium-gray;
           color: $body-font-color;
         }
       }
